--- a/src/main/webapp/log.html
+++ b/src/main/webapp/log.html
@@ -55,7 +55,7 @@
 
                 <info-input>
                     <template #input>
-                    <input type="text" placeholder="学校" v-model="school">
+                    <input type="text" placeholder="学校" v-model="school" @keyup.enter="picCodeRequest">
                 </template>
                     <template #img>
                     <img src="img/log/school.png">
@@ -64,7 +64,7 @@
 
                 <info-input>
                     <template #input>
-                    <input type="text" placeholder="学号/教工号" v-model="sNo">
+                    <input type="text" placeholder="学号/教工号" v-model="sNo" @keyup.enter="picCodeRequest">
                 </template>
                     <template #img>
                     <img src="img/log/sNo.png">
@@ -73,7 +73,7 @@
 
                 <info-input>
                     <template #input>
-                    <input type="password" placeholder="密码" v-model="password">
+                    <input type="password" placeholder="密码" v-model="password" @keyup.enter="picCodeRequest">
                 </template>
                     <template #img>
                     <img src="img/log/password.png">
