--- a/src/main/webapp/search.html
+++ b/src/main/webapp/search.html
@@ -16,17 +16,17 @@
     <div id="app">
         <div class="classifyContainer">
             <div class="classifyTitle">
-                <span :class="[others?'':'choosing']" @click="changeChoose('classify')">分类</span>
-                <span :class="[others?'choosing':'']" @click="changeChoose('others')">其他</span>
+                <span :class="{'choosing':!others}" @click="changeChoose('classify')">分类</span>
+                <span :class="{'choosing':others}" @click="changeChoose('others')">其他</span>
             </div>
             <div class="classifyIcon">
                 <div v-for="(classify,index) in synthesis" @click="childList(index)">
                     <img :src="['img/icon/'+classify.parentPicture]">
-                    <span :class="[secIndex==index?'indexChoose':'']">{{classify.parentName}}</span>
+                    <span v-cloak :class="{'indexChoose':secIndex==index}">{{classify.parentName}}</span>
                 </div>
             </div>
             <div :class="['concreteClassify',secIndex==0?'hideThi':'showThi']">
-                <span :class="[thiIndex==index?'indexChoose':'']" v-for="(classify,index) in composite" @click="titleSearch(index)">{{classify.subClassName}}</span>
+                <span :class="{'indexChoose':thiIndex==index}" v-for="(classify,index) in composite" @click="titleSearch(index)" v-cloak>{{classify.subClassName}}</span>
             </div>
         </div>
 
@@ -35,9 +35,9 @@
                 <div class="arrayBy leftBlock">
                     <span class="leftTitle">全部商品</span>
                     <div>
-                        <span :class="[arrayBy=='综合'?'arrayChoose':'']" @click="changeArrayBy('综合')">按综合</span>
-                        <span :class="[arrayBy=='时间'?'arrayChoose':'']" @click="changeArrayBy('时间')">按时间</span>
-                        <span :class="[arrayBy=='价格'?'arrayChoose':'']" @click="changeArrayBy('价格')">按价格</span>
+                        <span v-cloak :class="[arrayBy=='综合'?'arrayChoose':'']" @click="changeArrayBy('综合')">按综合</span>
+                        <span v-cloak :class="[arrayBy=='时间'?'arrayChoose':'']" @click="changeArrayBy('时间')">按时间</span>
+                        <span v-cloak :class="[arrayBy=='价格'?'arrayChoose':'']" @click="changeArrayBy('价格')">按价格</span>
                     </div>
                 </div>
                 <div class="searchInput">
@@ -48,12 +48,12 @@
                 <div class="classifyNav leftBlock">
                     <span class="leftTitle">全部分类</span>
                     <ul>
-                        <li v-for="(classify,index) in synthesis">
+                        <li v-for="(classify,index) in synthesis" @click="childList(index)">
                             <img :src="['img/icon/'+classify.parentPicture]">
-                            <span :class="[secIndex==index?'indexChoose':'']" @click="childList(index)">{{classify.parentName}}</span>
+                            <span :class="[secIndex==index?'indexChoose':'']" v-cloak>{{classify.parentName}}</span>
                             <transition name="leftNav" enter-active-class="leftThiEnter" leave-active-class="leftThiLeave">
                                 <ul v-if="index==secIndex">
-                                    <li v-for="(cla,i) in composite" :class="[i==thiIndex?'thiIndex':'']" @click="titleSearch(i)">{{cla.subClassName}}</li>
+                                    <li v-for="(cla,i) in composite" :class="[i==thiIndex?'thiIndex':'']" @click="titleSearch(i)" v-cloak>{{cla.subClassName}}</li>
                                 </ul>
                             </transition>
                         </li>
@@ -65,16 +65,16 @@
             <div class="goodsShow">
                 <div class="specificGoods" v-for="ex in goodsExample">
                     <img :src="['img/search/'+ex.goodsPicture]">
-                    <span>{{ex.goodsName}}</span>
+                    <span v-cloak>{{ex.goodsName}}</span>
                     <div>
-                        <span class="goodsPrice">￥{{ex.goodsPrice}}元</span>
-                        <span class="uploadTime">{{ex.uploadTime}}</span>
+                        <span class="goodsPrice" v-cloak>￥{{ex.goodsPrice}}元</span>
+                        <span class="uploadTime" v-cloak>{{ex.uploadTime}}</span>
                     </div>
                 </div>
                 <div class="pageTurn">
                     <span class="turnPage"><</span>
-                    <span class="page" v-for="page in allPage">{{page}}</span>
-                    <span>共{{allPage}}页</span>
+                    <span class="page" v-for="page in allPage" v-cloak>{{page}}</span>
+                    <span v-cloak>共{{allPage}}页</span>
                     <span class="turnPage">></span>
                 </div>
             </div>
