--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,15 +20,15 @@
                 <div class="allClassify">
                     <span @click="showDetailed">所有分类</span>
                     <ul v-if="!showDetialedClassify">
-                        <li v-for="classify in wholeClassify">
+                        <li v-for="classify in parentClassification">
                             <img :src='[classify.parentPicture]'>
                             <span>{{classify.parentName}}</span>
                         </li>
                     </ul>
                     <div class="detailedContent" v-if="showDetialedClassify">
-                        <div v-for="(classify,index) in wholeClassify">
+                        <div v-for="(classify,index) in parentClassification">
                             <h4>{{classify.goodsName}}</h4>
-                            <a href="" v-for="detailed in detailedClassify[index]">{{detailed}}</a>
+                            <a href="" v-for="detailed in childClassification[index]">{{detailed}}</a>
                         </div>
                     </div>
                 </div>
@@ -67,7 +67,7 @@
 
                 <span class="leftHandle" @click="turnLeft('perfect')"><</span>
                 <div class="goodsList">
-                    <div :class="['concreteContent',moveFlag.perfect?'moveL':'moveR']" v-for="content in perfectGoods">
+                    <div :class="['concreteContent',moveFlag.perfect?'moveL':'moveR']" v-for="content in guessLike">
                         <a href="#">
                             <img :src="[content.goodsPicture]">
                         </a>
@@ -99,7 +99,7 @@
                 </div>
                 <span class="leftHandle" @click="turnLeft('special')"><</span>
                 <div class="goodsList">
-                    <div :class="['concreteContent',moveFlag.hot?'moveL':'moveR']" v-if="showHot" v-for="content in hotGoods">
+                    <div :class="['concreteContent',moveFlag.hot?'moveL':'moveR']" v-if="showHot" v-for="content in hottest">
                         <a href="#">
                             <img :src="[content.goodsPicture]">
                         </a>
@@ -107,7 +107,7 @@
                         <p v-cloak class="specialPrice">{{content.goodsPrice}}</p>
                         <p v-cloak>收藏人数：{{content.starNum}}人</p>
                     </div>
-                    <div :class="['concreteContent',moveFlag.new?'moveL':'moveR']" v-if="!showHot" v-for="content in newGoods">
+                    <div :class="['concreteContent',moveFlag.new?'moveL':'moveR']" v-if="!showHot" v-for="content in latest">
                         <a href="#">
                             <img :src="[content.goodsPicture]">
                         </a>
